product slider addes

--- a/slider.html
+++ b/slider.html
@@ -12,6 +12,9 @@
 
 <body>
     <div class="container">
+        <div class="no-product-message">
+            <p>Ürün Bulunamadı</p>
+        </div>
         <div class="question-slider">
             <div class="question-container">
             </div>
@@ -31,8 +34,20 @@
                 </div>
             </div>
         </div>
-        <div class="prroduct-slider"></div>
+        <div class="product-slider">
+            <div class="products-container"></div>
+            <div class="product-buttons">
+                    <button id="prev-product">
+                        <i class="fa-solid fa-chevron-left"></i>
+                    </button>
+
+                    <button id="next-product">
+                        <i class="fa-solid fa-chevron-right"></i>
+                    </button>
+            </div>
+        </div>
         <div class="counter"></div>
+        <p class="reset">Tüm Seçimleri Sıfırla</p>
     </div>
 
 
